# ChainCast

./: CMakeLists.txt  README.md  clang-format.txt  enemy.cpp  entity.h  event.cpp  eventdefs.h  eventparameterdefs.h  eventparametermacros.h  fpsrenderer.h  main.cpp  mainwindow.h  makefile  player.cpp  player.h  projectile.cpp  stringutils.h  utils.h  variant.cpp  variant.h  wall.h
Unity/Chaincast/Assets/: MonsterController.cs
Unity/Chaincast/Assets/Prefabs/: DestructableWall.prefab  Monster.prefab  Player.prefab  Projectile.prefab
Unity/Chaincast/Assets/Scenes/: game.unity
Unity/Chaincast/Assets/Scripts/: Common.cs  DestructableWallController.cs  GameManager.cs  GameStart.cs  MonsterController.cs  PathFinder.cs  PlayerController.cs  ProjectileController.cs  ProjectileScript.cs
Unity/Chaincast/Assets/TilePalettes/: TilePalette_Floor.prefab
Unity/Chaincast/Assets/Tiles/: environment_tiles_3.asset
Unity/Chaincast/ProjectSettings/: InputManager.asset  ProjectSettings.asset  TagManager.asset
cppSDL/: circularbuffer.cpp  circularbuffer.h  enemy.h  entity.cpp  event.h  eventmacros.h  fpsrenderer.cpp  global.h  mainwindow.cpp  pathfinder.cpp  pathfinder.h  projectile.h  statetracker.h  stringutils.cpp  utils.cpp  wall.cpp
